kubernetes/clusters/vps/infrastructure/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vps-gateway
  namespace: envoy-gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-robin-vidal-com-tls
            namespace: envoy-gateway-system
          - name: hello-brainer-sh-tls
            namespace: envoy-gateway-system
      allowedRoutes:
        namespaces:
          from: All
